# python-short-term-autotrader

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: NOTES.md
src/autotrader/: __init__.py  main.py
src/autotrader/core/: __init__.py  base.py  builder.py  data.py  enum.py  helpers.py  history.py  predictor.py  schema.py  schemas.py  stock.py  types.py
src/autotrader/data/: history.py
src/autotrader/extension/: custom.py  malyarovich.py
src/autotrader/legacy/: builder.py  dataset.py  main.py  predictor.py
src/autotrader/legacy/extension/: malyarovich.py
src/autotrader/legacy/unstable/search/: greedy.py  helpers.py
src/autotrader/ml/: __init__.py  builder.py  dataset.py  predictor.py
src/autotrader/model/: dataset.py
src/autotrader/stock/: builder.py  history.py
src/autotrader/unstable/: greedy.py  helpers.py  tickers.py
src/autotrader/unstable/search/: config.py  consts.py  greedy.py  main.py  tickers.py
src/autotrader/v1/core/: base.py  helpers.py  schemas.py
src/autotrader/v1/custom/features/: sma.py  time.py  volume.py
src/autotrader/v1/custom/labels/: forward.py  open.py
src/autotrader/v1/model/: config.py  dataset.py  history.py  predictor.py
src/beta/: main.py
src/beta/core/: helpers.py  schemas.py
src/beta/extension/: custom.py
src/beta/model/: dataset.py  predictor.py
src/beta/search/: greedy.py
