[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
description = "Experimental weekly autotrading model."
version = "1.0.0"
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]
dependencies = [
  "yfinance==1.2.0",
  "pandas-ta==0.4.71b0",
  "pandera==0.30.1",
  "xgboost==3.2.0",
  "scikit-learn==1.8.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.8",
  "rich==14.3.3"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autotrader*"]

[tool.uv]
link-mode = "copy"
default-groups = ["dev"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["B", "SIM", "I", "PD", "E", "W", "D", "F", "PL", "UP"]
ignore = [
  "D100", "D101", "D102",
  "D103", "D104", "D105", 
  "D106", "D107",
  "PLR0912", "PLR0913", "PLR0915"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["autotrader"]