[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
description = "Experimental weekly autotrading model."
version = "1.0.0"
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]
dependencies = [
  "yfinance>=1.2.0",
  "pandera>=0.30.0",
  "pandas-ta>=0.4.71b0",
  "xgboost==3.2.0",
  "scikit-learn==1.8.0",
  "yahooquery>=2.4.0"
]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "rich>=14.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
link-mode = "copy"
default-groups = ["dev"]
