[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
description = "Experimental weekly autotrading model."
dynamic = ["version"]
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]
dependencies = [
  "yfinance>=1.2.0",
  "pandera>=0.30.0",
  "pandas-ta>=0.4.71b0",
  "xgboost==3.2.0",
  "scikit-learn==1.8.0",
  "alpaca-py>=0.43.0"
]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "rich>=14.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/autotrader/_version.py"

[tool.uv]
link-mode = "copy"
default-groups = ["dev"]
